--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": "next/core-web-vitals",
   "rules": {
-      "quotes": [2, "single"]
+      "quotes": [2, "single"],
+      "react-hooks/exhaustive-deps": "off"
   }
 }
