--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
   },
   "dependencies": {
     "@types/js-cookie": "^3.0.0",
+    "@types/validator": "^13.6.6",
     "js-cookie": "^3.0.1",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-data-table-component": "^7.4.5",
     "react-dom": "17.0.2",
     "sass": "^1.43.4",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
